fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ h4 {
   top: -10px;
   transition: 0.3s;
   transform: rotate(-3deg);
-  z-index: 3;
+  z-index: 2;
   cursor: pointer;
 }
 
@@ -325,7 +325,7 @@ h4 {
   top: -10px;
   transition: 0.3s;
   transform: rotate(5deg);
-  z-index: 3;
+  z-index: 2;
   cursor: pointer;
 }
 
